--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -69,7 +69,7 @@
 
                 {% block logo %}
                     <a href="/" class="navbar-brand page-scroll">
-                        <img class="logo-fba" src="/static/img/logo-en-old.png" />
+                        <img class="logo-fba" src="/static/img/logo-en-old.png" /><span>By <strong>VOILOTS</strong></span>
                     </a>
                 {% endblock %}
 
