--- a/html/templates/partner.html
+++ b/html/templates/partner.html
@@ -16,7 +16,7 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-street-view"></i> {% trans "Seja um colaborador VOI Services" %}</h1>
+          <h1 class="page-header"><i class="fa fa-street-view"></i> {% trans "Seja um colaborador VOI Lots" %}</h1>
           <div class="row">
             <div class="col-md-1">
             </div>
