--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -42,8 +42,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
-                <a href="/" class="navbar-brand page-scroll">
-                    <img src="/static/img/logo_sup.png" /><span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span><!--<img src="/static/img/logo_bottom.png" />-->
+                <a href="/" id="logo-verification" class="navbar-brand page-scroll">
+                    <img class="logo-fba" src="/static/img/logo-lots.png" />
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
