--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -42,9 +42,15 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
-                <a href="/" id="logo-verification" class="navbar-brand page-scroll">
-                    <img class="logo-fba" src="/static/img/logo-lots.png" />
-                </a>
+                {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
+                    <a href="/" class="navbar-brand page-scroll">
+                        <img class="logo-fba" src="/static/img/logo-en-old.png" /><span>By <strong>VOILOTS</strong></span>
+                    </a>
+                {% elif request.CURRENT_DOMAIN == 'lots.voiservices.com' %}
+                    <a href="/" class="navbar-brand page-scroll">
+                        <img class="logo-fba" src="/static/img/logo-lots.png" />
+                    </a>
+                {% endif %}
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
