--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -38,11 +38,11 @@
 </head>
 
 <body id="page-top" class="login">
-    <div id="login-box">{{ request.CURRENT_DOMAIN }}
+    <div id="login-box">
             {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
-            <img src="/static/img/logo-fba-new.png" width="176"/>
+                <div class="contem-logo"><img src="/static/img/logo-fba-new.png" width="176"/><span>By <strong>VOILOTS</strong></span></div>
             {% elif request.CURRENT_DOMAIN == 'lots.voiservices.com' %}
-            <img class="logo-lots" src="/static/img/logo-lots.png" />
+                <img class="logo-lots lots-login" src="/static/img/logo-lots.png" />
             {% endif %}
             <p class="left">{% trans "Digite abaixo seus dados de acesso" %}</p>
             <form action="" method="post" id="form-login">
