--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -69,7 +69,7 @@
 
                 {% block logo %}
                     <a href="/" class="navbar-brand page-scroll">
-                        <img class="logo-fba" src="/static/img/logo-en-old.png" /><span>By <strong>VOILOTS</strong></span>
+                        <img class="logo-fba" src="/static/img/logo-en-old.png" /><span>By <strong>VOIRedirect</strong></span>
                     </a>
                 {% endblock %}
 
@@ -116,46 +116,53 @@
                         </ul>
                     </li>
                     {% endif %}
-{% if LANGUAGE_CODE == 'pt' %}
-                    <li class="seja-parceiro-menu {% block partner %}{% endblock %}">
-                       <a href="{% url 'colab' %}">
-                          <i class="fa fa-street-view"></i> {% trans "Seja um colaborador" %}
-                          <span title="{% trans 'Seja um colaborador' %}" class="suspenso">{% trans "Novo" %}</span>
-                       </a>
-                    </li>
-{% endif %}
-                    <li class="{% block storelist %}{% endblock %}">
-                        <a href="{% url 'store' %}" class="logo-marca-link operacional-conf"><i class="fa fa-shopping-bag"></i> {% trans "Loja" %}</a>
-                    </li>
 
-                    <li class="{% block comoFunciona %}{% endblock %}">
-                        <a href="{% url 'how_it_works' %}" class=""><i class="fa fa-book"></i> {% trans "Como Funciona" %}</a>
-                    </li>
-{% if LANGUAGE_CODE == 'pt' %}
-                    <li class="{% block faq %}{% endblock %}">
-                        <a href="{% url 'faq' %}" class=""><i class="fa fa-question-circle"></i> {% trans "Perguntas Frequentes" %}</a>
-                    </li>
-{% endif %}
-                    <li>
-                        <a href="javascript: void(0);" id="contato-popup-link"><i class="fa fa-fw fa-envelope"></i> {% trans "Contato" %}</a>
-                    </li>
-{% if LANGUAGE_CODE == 'pt' %}
-                    <li class="tutorial">
-                        <a href="{% trans '/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf' %}" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutorial Plataforma" %}</a>
-                    </li>
+                    {% if request.CURRENT_DOMAIN == 'lots.voiservices.com' %}
+                        {% if LANGUAGE_CODE == 'pt' %}
+                            <li class="seja-parceiro-menu {% block partner %}{% endblock %}">
+                               <a href="{% url 'colab' %}">
+                                  <i class="fa fa-street-view"></i> {% trans "Seja um colaborador" %}
+                                  <span title="{% trans 'Seja um colaborador' %}" class="suspenso">{% trans "Novo" %}</span>
+                               </a>
+                            </li>
+                        {% endif %}
+                        <li class="{% block storelist %}{% endblock %}">
+                            <a href="{% url 'store' %}" class="logo-marca-link operacional-conf"><i class="fa fa-shopping-bag"></i> {% trans "Loja" %}</a>
+                        </li>
 
-                    <!-- Novo item com código de usuário -->
+                        <li class="{% block comoFunciona %}{% endblock %}">
+                            <a href="{% url 'how_it_works' %}" class=""><i class="fa fa-book"></i> {% trans "Como Funciona" %}</a>
+                        </li>
+                        {% if LANGUAGE_CODE == 'pt' %}
+                            <li class="{% block faq %}{% endblock %}">
+                                <a href="{% url 'faq' %}" class=""><i class="fa fa-question-circle"></i> {% trans "Perguntas Frequentes" %}</a>
+                            </li>
+                        {% endif %}
+                        <li>
+                            <a href="javascript: void(0);" id="contato-popup-link"><i class="fa fa-fw fa-envelope"></i> {% trans "Contato" %}</a>
+                        </li>
+                        {% if LANGUAGE_CODE == 'pt' %}
+                            <li class="tutorial">
+                                <a href="{% trans '/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf' %}" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutorial Plataforma" %}</a>
+                            </li>
+                            <!-- Novo item com código de usuário -->
+                        {% endif %}
+                    {% endif %}
 
-                    <li class="tutorial adress" id="abre-codigo">
-                        <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fas fa-user-circle" style="font-size: 70px;"></i> {% trans "Código Cliente" %}: <span>{{ user.from_key }}</span></a>
-                        <hr />
-                        <small id="btn-cod-cliente">{% trans "Onde utilizo esse código?" %}</small>
-                    </li>
-{% endif %}
+                    {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
+                        <li class="tutorial adress" id="abre-codigo">
+                            <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fas fa-user-circle" style="font-size: 70px;"></i> {% trans "Código Cliente" %}: <span>{{ user.from_key }}</span></a>
+                            <hr />
+                            <small id="btn-cod-cliente">{% trans "Onde utilizo esse código?" %}</small>
+                        </li>
+
+                        <li class="tutorial adress adress-v" id="abre-endereco">
+                            <a href="javascript:void(0);" class="abre-tutorial open-endereco"><i class="fa fa-2x fa-map-marker"></i><br /> {% trans "Nosso Endereço" %}</a>
+                        </li>
+                    {% endif %}
+
 {% comment %}
-                    <li class="tutorial adress">
-                        <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fa fa-map-marker"></i> {% trans "Ver Endereço VOI" %}</a>
-                    </li>
+
 
 
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
@@ -491,6 +498,28 @@
                     <p>{% trans "Com isso, criamos o 'Código do usuário'. No momento do seu cadastro, esse código é gerado e enviado para você por email. Você que utiliza nossos serviços de redirecionamento, storage e envia produtos para nós precisa inserir esse código ao lado do seu nome no remetente." %}</p>
                     <p>{% trans "Resumindo, nas suas compras, ao lado do seu nome, insira o seu código de usuário. Caso não seja inserido, nós não conseguiremos identificar seus produtos quando chegarem." %}</p>
                     <p><strong>Caso a(s) caixa(s) não estejam identificadas com o código de usuário, será cobrada uma taxa de identificação de caixa.</strong></p>
+                    <p>Para maiores informações, <a href="/pt/termos-e-condicoes-de-uso" class="download">leia nossos termos</a></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+ <!-- Modal nosso endereço -->
+    <div id="modal-endereco" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"><i class="fas fa-user-circle" style="font-size: 30px;"></i> {% trans "Para onde envio os produtos?" %}</h4>
+                </div>
+                <div class="modal-body">
+                    <p>{% trans "Olá" %}, {{ user.first_name }}</p>
+                    <p>{% trans "Veja abaixo nosso endereço:" %}</p>
+                    <p>{% trans "920 lafayette Road suit 204-B, Seabrook NH - 03874" %}</p>
+                    <p><strong>{% trans "Não esqueça de colocar o seu código de cliente ao lado do seu nome no from." %}</strong></p>
                     <p>Para maiores informações, <a href="/pt/termos-e-condicoes-de-uso" class="download">leia nossos termos</a></p>
                 </div>
                 <div class="modal-footer">
