--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -40,7 +40,7 @@
 <body id="page-top" class="login">
     <div id="login-box">
             {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
-                <div class="contem-logo"><img src="/static/img/logo-fba-new.png" width="176"/><span>By <strong>VOILOTS</strong></span></div>
+                <div class="contem-logo"><img src="/static/img/logo-fba-new.png" width="176"/><span>By <strong>VOIRedirect</strong></span></div>
             {% elif request.CURRENT_DOMAIN == 'lots.voiservices.com' %}
                 <img class="logo-lots lots-login" src="/static/img/logo-lots.png" />
             {% endif %}
