--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -42,7 +42,7 @@
 
                 {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
                     <a href="/" class="navbar-brand page-scroll">
-                        <img class="logo-fba" src="/static/img/logo-en-old.png" /><span>By <strong>VOILOTS</strong></span>
+                        <img class="logo-fba" src="/static/img/logo-en-old.png" /><span>By <strong>VOIRedirect</strong></span>
                     </a>
                 {% elif request.CURRENT_DOMAIN == 'lots.voiservices.com' %}
                     <a href="/" class="navbar-brand page-scroll">
