--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -150,6 +150,13 @@
                     {% endif %}
 
                     {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
+
+                        {% if LANGUAGE_CODE == 'pt' %}
+                            <li class="tutorial">
+                                <a href="{% trans '/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf' %}" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutorial Plataforma" %}</a>
+                            </li>
+                            <!-- Novo item com código de usuário -->
+                        {% endif %}
                         <li class="tutorial adress" id="abre-codigo">
                             <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fas fa-user-circle" style="font-size: 70px;"></i> {% trans "Código Cliente" %}: <span>{{ user.from_key }}</span></a>
                             <hr />
