--- a/html/templates/email/account-activation.html
+++ b/html/templates/email/account-activation.html
@@ -16,10 +16,10 @@
         {% blocktrans %}Caro usuário, você foi registrado em nosso serviço de venda de Lotes - VOI Lots e de redirecionamento - FBA Prep Master.
             <br><br>
             • Serviço de redirecionamento FBA Prep Master (https://fbaprepmaster.com): Sempre que enviar produtos para a Warehouse da FBA Prep Master, você deverá incluir o seu código de cliente como remetente, além do seu nome, claro. Seu código de cliente é: {{ user_from_key }}
-            Veja tu\orial de funcionamento da plataforma: http://TUTORIAL-DA-PLATAFORMA-REDIRECIONAMENTO.
+            Veja tutorial de funcionamento da plataforma: https://fbaprepmaster.com/pt/tutorial-plataforma
             <br><br>
             • Serviço de venda de Lotes (https://lots.voiserices.com): Os Lotes adquiridos irão direto para o seu estoque na FBA Prep Master, considerando o redirecionamento gratuito, dentro das políticas informadas no site.
-            Veja o tutorial explicando todo o funcionamento desde a compra de um lote até o redirecionamento: http://TUTORIAL-DE-LOTES
+            Veja o tutorial explicando todo o funcionamento desde a compra de um lote até o redirecionamento: https://lots.voiservices.com/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf
             <br><br>
             Att,
             <br>
