--- a/html/templates/shipment_add.html
+++ b/html/templates/shipment_add.html
@@ -153,6 +153,14 @@
             </div>
             <br>
           </div>
+            <div class="row">
+            <div class="form-group">
+                <div class="col-md-5"><br>
+                    <label>{% trans "Observação" %}:</label>
+                    <textarea name="obs" placeholder="Observações sobre seu envio..." class="form-control ui-autocomplete-input" id="obs" autocomplete="off"></textarea>
+                </div>
+            </div>
+          </div>
           <div class="row">
             <button class="btn btn-primary filtar-btn alterar-status" id="send-btn" type="submit"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
             <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br><br>
