--- a/html/templates/merchant_shipment_add.html
+++ b/html/templates/merchant_shipment_add.html
@@ -108,6 +108,17 @@
                 <p><strong><i class="fa fa-fw fa-list-ol"></i> {% trans "Total de Produtos" %}: </strong><span id="totalProducts">-</span> </p>
             </div>
           </div>
+            <div class="row">
+            <div class="form-group">
+                <div class="col-md-5"><br>
+                    <label>{% trans "Observação" %}:</label>
+
+                    <textarea name="obs" placeholder="Observações sobre seu envio..." class="form-control ui-autocomplete-input" id="obs" autocomplete="off"></textarea>
+
+                </div>
+
+            </div>
+          </div>
           {% endfor %}
           <div class="row">
             <button class="btn btn-primary filtar-btn alterar-status" id="send-btn" type="submit"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
