--- a/html/templates/detalhe_envio_brasil.html
+++ b/html/templates/detalhe_envio_brasil.html
@@ -31,7 +31,7 @@
                     <input type="text" name="product_set-autocomplete" placeholder="Digite o nome do item a ser inserido no envio..." class="form-control ui-autocomplete-input" id="product_set-autocomplete" autocomplete="off">
                 </div>
                 <div class="col-md-3">
-                    <a class="btn btn-primary filtar-btn product_set-add-row add-row" title="Adicionar item" href="javascript:void(0);"><i class="fa fa-fw fa-plus-square"></i> Adicionar Item</a>
+                    <a class="btn btn-primary filtar-btn product_set-add-row add-row" title="Adicionar item" href="javascript:void(0);" id="btn-whaz"><i class="fa fa-fw fa-plus-square"></i> Adicionar Item</a>
                 </div>
             </div>
           </div>
