--- a/html/templates/envio_brasil_cadastro.html
+++ b/html/templates/envio_brasil_cadastro.html
@@ -1,4 +1,5 @@
 {% extends 'includes/layout.html' %}
+{% load i18n %}
 
 {% block criarenviobrasil %}active{% endblock %}
 
@@ -8,10 +9,7 @@
 
 {% block specific_scripts %}
     <script src="/static/externo/ckeditor/ckeditor.js"></script>
-    <script src="/static/js/specifics/shipment.js"></script>
 {% endblock %}
-
-
 
 {% block conteudo %}
 
