Ajustes site fba

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -155,7 +155,7 @@
 
                         {% if LANGUAGE_CODE == 'pt' %}
                             <li class="tutorial">
-                                <a href="{% trans '/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf' %}" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutorial Plataforma" %}</a>
+                                <a href="{% trans '/pt/tutorial-plataforma' %}" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutoriais" %}</a>
                             </li>
                             <!-- Novo item com código de usuário -->
                         {% endif %}
