ajustes popup we create

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -549,9 +549,11 @@
                 </div>
                 <div class="modal-body">
                     <p>{% trans "Olá" %}, {{ user.first_name }}</p>
-                    <p>{% trans "Para que possamos realizar o seu envio, através do serviço 'We create your amazon Shipment, precisamos que ANTES, realize a configuração em sua conta." %}</p>
+                    <p>{% trans "Para que possamos realizar o seu envio, através do serviço 'We create your Amazon Shipment, precisamos que ANTES, realize a configuração em sua conta." %}</p>
                     <p>{% trans "Veja como: <a class='download' href='https://fbaprepmaster.com/pt/create-a-shipment'>https://fbaprepmaster.com/pt/create-az-shipment</a>" %}</p>
+                    <p><strong>Não se esqueça que você precisa também já ter cadastrado os produtos do seu envio em seu estoque na Amazon.</strong></p>
                     <p><strong>{% trans "Assinantes VOI Prime podem utilizar este serviço sem nenhum custo adicional" %}</strong></p>
+                    <!--
                     <div class="panel-group" id="accordion">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -569,7 +571,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fas fa-check"></i> {% trans "Já cadastrei. Seguir com envio" %}</button>
